Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
/* ... */
.CreateInnerWrapper {
	padding-top: 10px;
}

.Line {
	background-image: url(label_bak.png);
	background-repeat: repeat-y;
	background-position: left;
	background-color: #f5f5f5;
	width: auto;
	/*overflow: auto;*/
}

.FirstLine {
	border-top: 1px solid #e5e5e5;
}

.Line input,
.Line textarea {
	/*border: 1px solid #a9a9a9;*/
	padding: 3px;
	width:  300px;
}

.QueryLine {
	overflow: hidden;
}

.QueryAllLine {
	overflow: hidden;
}

.QueryAllLine .LineInner {
	overflow: hidden;
}

.QueryLine input, .QueryAllLine input,
.QueryLine textArea, .QueryAllLine textArea,
.QueryAllLine input {
	width: 165px;
	margin-left: 5px;
}

a.date-picker-control {
	display: none;
	visibility: hidden;
	width: 0;
	margin: 0;
	padding: 0;
}

.QueryLine .DateReleasedAttrVal input,
.QueryLine .RevenueAttrVal input,
.QueryLine .BudgetAttrVal input,
.QueryLine .NumberOfVotesAttrVal input,
.QueryLine .RunningAverageAttrVal input {
	width: 100px;
}

.ObjActionList input{
	width: auto;
	border: none;
	/*padding: 0;*/
}

.Line .LabelWrapper {
	float:left;
	padding: 10px 20px;
	text-align: right;
	width: 167px;
}

.Line label,
.Line .Label {
	position: relative;
	color: #666;
	font-weight: bold;
}

.Line label abbr,
.Line .Label abbr {
	position: absolute;
	left: -10px;
	border-bottom: none;
	color: #d60000;
}

label.ErrorLabel,
span.ErrorLabel {
	/*color: #d60000;*/
}

.LineInner {
	background-image: url(line_border.png);
	background-position: left bottom;
	background-repeat: no-repeat;
	/*overflow: auto;*/
	width: auto;
}

.AttrVal {
	display: block;
	padding: 10px 10px 10px 220px;
	font-weight: bold;
}

.EditAttrVal textarea,
.CreateAttrVal textarea {
	width: 480px;
	height: 200px;
}

.EditAttrVal,
.QueryAllAttrVal,
.QueryAttrVal {
	padding-top: 7px;
	padding-bottom: 7px;
}

.QueryAllQuery {
	float: left;
	width: 700px;
}

.QueryAllActions {
	float: left;
	margin-top: 7px;
}


.DirectorsAttrVal input {
	/*width: auto;*/
}

.DirectorsAttrVal select {
	width: 200px;
}

.Line .InspectAttributeValue {
	margin-top: 5px;
	float: left;
}

.ERD2WExample {
	font-size: 80%;
	font-style: italic;
	color: #999;
}

.TopActions {
	margin-bottom: 10px;
	overflow: auto;
}

.BtmActions {
	margin-top: 20px;
	overflow: auto;
}

.CreateBtmActions {
	overflow: visible;
}

.ObjTable,
.EmbeddedObjTable {
	width: 100%;
}

.ObjTable td,
.ObjTable th,
.EmbeddedObjTable td,
.EmbeddedObjTable th {
	border: none;
	font-weight: bold;
}

.ObjTable th {
	background-color: #414b5e;
	color: #c2c6cf;
	text-align: left;
	font-weight: normal;
	height: 23px;
}

.EmbeddedObjTable tbody {
	border: 3px solid #d5d5d5;
}

.EmbeddedSelectObjTable tbody {
	border: none;
}

.ObjectRow {
	background-color: #f5f5f5;
	padding: 3px;
}

.LastObjRow {
	border-bottom: 1px solid #e6e9ef;
}

.OddObjRow td {
	background-color: #e6e9ef;
}

.OddObjRow .Button span {
	background-color: #e6e9ef;
}

/* hide empty children row */
.ObjRow.NestedObjRow .hidden {
	line-height: 0px;
	padding: 0px;
}

.ComboTHLink .Label{
	text-decoration: none;
	color: #c2c6cf;
	padding: 0;
	float: none;
	text-align: left;
}

.ComboTHLink .Label {
}

.ComboTHLinkDes,
.ComboTHLinkAsc {
	padding-right: 15px;
	color: #fff;
}

.ComboTHLinkAsc {
	background: url(sort_asc.png) no-repeat right;
}

.ComboTHLinkDes {
	background: url(sort_dsc.png) no-repeat right;
}

.ComboTHLink:hover {
	border-bottom: 1px solid #fff;
}

.EvenLine {
	
}

.LftActionCell {

}


.Attributes {
	/*overflow: hidden;*/
}


.CurrentRelatedBlock {
	width: 480px;
	margin: 10px auto;
	padding: 20px;
}

.CurrentRelatedBlock label {
	float: left;
	margin-right: 10px;
}

.CurrentRelatedBlock select {
	width: 200px;
	height: 8em;
}

.RelatedObj {
	float: left;
}
.RelatedObjControls .ActionList {
	float: none;
}

.RelatedActionBlock {
	border-top: 1px solid #e4e4e4;
}

.RelatedActionBlock .ActionList {
	float: none;
	width: 300px;
	margin: 20px auto;
}

/* TABS */
.Tab,
.TabItemsList {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

.TabItemsList {
	position: relative;
	top:  1px;
	width: 100%;
	overflow: hidden;
}

.Tab {
	padding-right: 30px;
	float: left;
}

.Tab span {
	display: block;
	padding-bottom: 12px;
	padding-top: 8px;
	font-weight: bold;
}

.TPTab_Selected span {
	background-image: url(pag_tab_sel.png);
	background-position: center bottom;
	background-repeat: no-repeat;
}

.TabPanelContent .InnerWrapper {
	border-top: 1px solid #e1e1e1;
}

/*.ConfirmDeleteInnerWrapper .EmbeddedWrapper {
	border-top: 2px solid #ddcc99;
	border-bottom: 2px solid #ddcc99;
}*/

.EditToOneWrapper {
	position: relative;
	overflow: hidden;
	/*left: 150px;*/
	/*z-index: 1000;*/
	border: 1px solid #ddd;
	background-color: #eee;
	width: 500px;
	padding: 10px;
}

.ActionCell input {
	width: auto;
}

.EditToOneWrapper .LftActionCell {
	width: 15px;
}

.EditToOneWrapper input {
	float:left;
}

.InplaceSearchBar {
	overflow: hidden;
	margin-bottom: 10px;
}

.EmbListObjTable {
	width: auto;
}

.EmbListObjTable th {
	height: auto;
	padding: .1em;
}

/* PAGINATOR */

.BatchNav {
	padding-bottom: 10px;
	text-align: right;
	overflow: hidden;
}

.BottomBatchNav {
	padding-top: 10px;
	overflow: auto;
	margin: 0 auto;
}

.paginator {
	float: left;
	margin-right: 10px;
}

.paginator a,
.paginator span {
	background: url("pag_step_shad.png") 0 0 no-repeat;
	background-size: cover;
    min-width: 25px;
    width: auto;
    height: 25px;
    padding-left: 2px;
    padding-right: 2px;
    margin-right: 5px;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
	display: inline-block;
	border: 1px solid #CDCDCD;
	line-height: 25px;
	text-align: center;
	font-weight: bold;
	color: #666;
}

.EmbeddedTopBatchNav .paginator a,
.EmbeddedTopBatchNav .paginator span,
.EmbeddedBottomBatchNav .paginator a,
.EmbeddedBottomBatchNav .paginator span {
	background: url(pag_step.png) no-repeat;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
}
/* ... */

